--- a/src/index.jade
+++ b/src/index.jade
@@ -58,14 +58,14 @@ html
       section(data-bespoke-state='snorby')
 
       section(data-bespoke-state='red')
-        h1 For The Noobs
+        h1 For The <b>Noobs</b>
         ul
           li Reads IDS events from a database
           li Simple (worthless?!?) metrics
           li Plugin to view transcript and pcap data
           li Easy to deploy - yes, it is.
           li BASE replacment I guess.
-          li Not ugly <em>more important that you would think</em>
+          li Not ugly <em>more important than you would think</em>
 
       section(data-bespoke-state='orange')
         h1 The <b>Good</b>
@@ -75,7 +75,7 @@ html
           li Plugins (kinda?)
           li Simple Time based metrics
           li Reporting, mostly useful for export needs
-          li Not ugly <em>more important that you would think</em>
+          li Not ugly <em>more important than you would think</em>
 
       section(data-bespoke-state='green')
         h1 The <b>Bad</b>
@@ -86,7 +86,7 @@ html
           li Not Ugly... huh?
 
       section(data-bespoke-state='pink')
-        h1 The Future of "Snorby"*
+        h1 The Future of "<i>Snorby</i>"
         ul
           li Go-lang (http://www.golang.org)
           li WORKFLOW.. SRSLY.. THIS IS IMPORTANT
@@ -97,10 +97,10 @@ html
           li New Name, Project and new Reasons for making it.
 
       section(data-bespoke-state="dance")
-        h1 It's Secret Still!
+        h1 It's <b>Secret</b> Still!
 
       section(data-bespoke-state="red")
-        h1 WTF is Go?
+        h1 WTF is <strong>Go</strong>?
 
       section(data-bespoke-state="red")
         h1 Well...
@@ -145,35 +145,35 @@ html
             }
 
       section(data-bespoke-state="omg")
-        h1 OMG!!!!!!!!!
+        h1 OMG!!!
 
       section(data-bespoke-state="pink")
         h1 So, Yea... That's what's <b>up</b>.
 
       section(data-bespoke-state='chill')
-      section(data-bespoke-state='dance2')
 
       section(data-bespoke-state="pink")
         h1 Question <b>#1</b>
         ul
           li Is the security software we buy garbage?
           li or is it?
-          li I'm just asking questions!
+          li <strong>I'm just asking questions!</strong>
 
       section(data-bespoke-state='smurf')
 
       section(data-bespoke-state="pink")
         h1 Question <b>#2</b>
         ul
-          li Cisco, paloalto, fireeye, Symantec.. fucking garbage?
-          li or is it?
-          li I'm just asking questions!
+          li Did large security companies destroy your industry 
+          li with bullshit marketing and shitty products?
+          li or did they?
+          li <strong>I'm just asking questions!</strong>
 
 
       section(data-bespoke-state='question2')
 
       section(data-bespoke-state="red")
-        h1 So, Beef with the current
+        h1 So, <b>Beef</b> with the current
         ul
           li Tables? Let's Talk.
           li Unstructured data
@@ -183,22 +183,22 @@ html
           li This isn't a Sunday drive.
 
       section(data-bespoke-state="pink")
-        h1 TABLES... NO... bad designer!
+        h1 <strong>TABLES</strong>... NO... bad designer!
 
       section(data-bespoke-state='NO')
 
       section(data-bespoke-state="orange")
-        h1 Tables != Efficient
+        h1 Tables <strong>!=</strong> Efficient
         ul
           li Big Data.. BUZZWORD!!
           li Does pagination make sense still?
           li Filters.. It's like the new hot
-          li Splunk, Arcsight, Logstash..
+          li Splunk, Arcsight, kibana..
           li WORTHLESS - Unless you like wasting time.
           li It's the applications problem to solve.
 
       section(data-bespoke-state="green")
-        h1 Unstructured Data
+        h1 <b>Unstructured</b> Data
         ul
           li Collect Everything... cool.
           li Search anything... cool.
@@ -206,5 +206,89 @@ html
           li workflow... fail.
           li context... fail.
           li interface design fails.. OMG YES!
+
+      section(data-bespoke-state="blue")
+        h1 <strong>Work</strong><b>Flow</b>
+        ul
+          li X + Y = ???
+          li Track The Incident
+          li Metrics and History
+          li Parallelism
+          li Reporting Becomes Simple 
+
+      section(data-bespoke-state="blue")
+        h1 <b>Context</b>
+        ul
+          li X + Y = ??? <i>same concept</i>
+          li Designed To Search - Not Connect 
+          li pivoting
+          li A lot can be automated 
+          li Storytelling 
+
+      section(data-bespoke-state="green")
+        h1 Tell a <b>Story</b>
+        ul
+          li design your interface to tell a story 
+          li steps to follow for value add 
+          li lead the user and push a process
+          li don't over do it
+
+      section(data-bespoke-state="red")
+        h1 SAVE <b>TIME</b>
+        ull
+          li More Reporting and Less Searching 
+          li Visualizations need to be interpreted (more) 
+          li Wordflow, Context and Process speed up response
+          li We are going the wrong way.
+
+      section(data-bespoke-state="orange")
+        h1 <b>current</b> trends 
+        ul
+          li Search, Search.. more search.. all the data 
+          li Store all your structured and unstructured data! 
+          li General search and display interfaces
+          li Dynamic charts by type.
+
+      section(data-bespoke-state="blue")
+        h1 My <b>philosophy</b> on this
+
+      section(data-bespoke-state="blue")
+        h1 <b>Tools</b> VS <b>Applications</b>
+        ul
+          li Tools: search - Applications: find
+          li Tools: export - Applications: create 
+          li Tools: Empower - Applications: Have Power 
+          li Both are great in the right situations 
+
+      section(data-bespoke-state="green")
+        h1 <b>Science</b> & <strong>Stuff</strong>
+        ul
+          li behavioral profiling 
+          li pattern anomalies 
+          li Connecting the right bits 
+          li ultimately producing better results
+          li false positives
+
+      section(data-bespoke-state="red")
+        h1 <strong>wtf</strong> does this have 
+        h1 to do with <b>interfaces</b>?
+        
+      section(data-bespoke-state='dance2')
+
+      section(data-bespoke-state="red")
+        h1 <b>everything</b> 
+
+      section(data-bespoke-state="red")
+        h1 Your <strong>Interface</strong> Sucks
+        ul
+          li If you don't have the right data to show.
+          li If you simply return data and walk away
+          li If you don't offer value outside of storage
+          li If your metrics are ridiculous *cough*Snorby*cough*
+          li A good interface has nothing to do with design
+          li but trust me.. its still very important too.
+        
+      section(data-bespoke-state="blue")
+        h1 <b>Questions?</b>
 
     script(src='build/build.js')
