--- a/src/index.jade
+++ b/src/index.jade
@@ -278,6 +278,26 @@ html
       section(data-bespoke-state="red")
         h1 <b>everything</b> 
 
+      section(data-bespoke-state="orange")
+        h1 Ok, back to <b>Snorby</b>
+
+      section(data-bespoke-state="blue")
+        h1 Lessons <b>Learned</b> 
+        ul
+          li Finding problems to solve is not always easy
+          li There is a lot of room for more applications in OSS
+          li Workflow needs a bigger spotlight imho.
+          li Answer questions before they are asked (if possible)
+
+      section(data-bespoke-state="green")
+        h1 So, security <strong>interface</strong> design
+        ul
+          li Should be foced around a process
+          li Should filter and ask questions vs paging data
+          li Should still have metrics and dashboard but with more insight
+          li Should use new technology and mathematics to focus your telescope
+          li Should be ready for collaboration
+
       section(data-bespoke-state="red")
         h1 Your <strong>Interface</strong> Sucks
         ul
