--- a/src/index.jade
+++ b/src/index.jade
@@ -27,7 +27,7 @@ html
           li <em>Hipster?</em>
           li Designer (application interfaces)
           li I've built stuff you may have used. (Mandiant, Tenable...)
-          li Entrepreneur (working on my second company now)
+          li Entrepreneur (startups and stuff)
           li <strong>BUT</strong> most importantly...
 
       section(data-bespoke-state='red')
@@ -81,7 +81,7 @@ html
         h1 The <b>Bad</b>
         ul
           li FUCKING WEB SCALE!@#!@#!@#!@#!@#!
-          li Database fails..
+          li Database fails...
           li Ruby/Rails
           li Not Ugly... huh?
 
@@ -278,6 +278,16 @@ html
       section(data-bespoke-state="red")
         h1 <b>everything</b> 
 
+      section(data-bespoke-state="red")
+        h1 Your <strong>Interface</strong> Sucks
+        ul
+          li If you don't have the right data to show.
+          li If you simply return data and walk away
+          li If you don't offer value outside of storage
+          li If your metrics are ridiculous *cough*Snorby*cough*
+          li A good interface has nothing to do with design
+          li but trust me.. its still very important too.
+
       section(data-bespoke-state="orange")
         h1 Ok, back to <b>Snorby</b>
 
@@ -298,15 +308,6 @@ html
           li Should use new technology and mathematics to focus your telescope
           li Should be ready for collaboration
 
-      section(data-bespoke-state="red")
-        h1 Your <strong>Interface</strong> Sucks
-        ul
-          li If you don't have the right data to show.
-          li If you simply return data and walk away
-          li If you don't offer value outside of storage
-          li If your metrics are ridiculous *cough*Snorby*cough*
-          li A good interface has nothing to do with design
-          li but trust me.. its still very important too.
         
       section(data-bespoke-state="blue")
         h1 <b>Questions?</b>
