--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -5,8 +5,8 @@
 // thanks to Stylus' "import css" and "paths" options
 
 @import 'normalizecss/normalize.css'
+/* @import 'prism/themes/prism-okaidia.css' */
 
-@import 'prism/themes/prism-okaidia.css'
 // Check out "bower_components/prism/themes/" for available themes
 
 // Style using Bespoke Classes: https://github.com/markdalgleish/bespoke-classes
